--- a/WoofRunner/Storyboards/RenameDialogViewController.xib
+++ b/WoofRunner/Storyboards/RenameDialogViewController.xib
@@ -6,11 +6,13 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RenameDialogViewController" customModule="WoofRunner" customModuleProvider="target">
             <connections>
+                <outlet property="invalidWarningText" destination="DXd-6D-P3r" id="uN0-bJ-yHP"/>
                 <outlet property="levelNameTextField" destination="hws-cS-w2j" id="cy8-75-ecz"/>
                 <outlet property="view" destination="iN0-l3-epB" id="Sn3-iH-qsw"/>
             </connections>
@@ -24,7 +26,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="401" height="179"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Save Level As:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ESv-EL-H5h">
-                            <rect key="frame" x="62" y="44" width="277" height="41"/>
+                            <rect key="frame" x="62" y="23" width="277" height="41"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="41" id="JKH-CW-FwU"/>
                             </constraints>
@@ -32,8 +34,18 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Level name should be between 5 to 40 characters!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DXd-6D-P3r">
+                            <rect key="frame" x="32" y="145" width="336" height="21"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="21" id="9IE-7B-0Xs"/>
+                                <constraint firstAttribute="width" constant="336" id="Rr6-Hl-A8f"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="AvenirNextCondensed-Medium" family="Avenir Next Condensed" pointSize="15"/>
+                            <color key="textColor" red="1" green="0.37593253663072634" blue="0.40205225641564213" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Level Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hws-cS-w2j">
-                            <rect key="frame" x="57" y="107" width="286" height="30"/>
+                            <rect key="frame" x="57" y="100" width="286" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="B9m-Fp-WuI"/>
                                 <constraint firstAttribute="width" constant="286" id="Ttd-tI-Nwd"/>
@@ -48,9 +60,12 @@
                         <constraint firstItem="hws-cS-w2j" firstAttribute="centerX" secondItem="Thc-ns-iG4" secondAttribute="centerX" id="AH4-V8-PBe"/>
                         <constraint firstAttribute="height" constant="179" id="EAK-r7-r6v"/>
                         <constraint firstItem="ESv-EL-H5h" firstAttribute="leading" secondItem="Thc-ns-iG4" secondAttribute="leading" constant="62" id="FtN-bd-j2v"/>
-                        <constraint firstAttribute="bottom" secondItem="hws-cS-w2j" secondAttribute="bottom" constant="42" id="c9L-p5-lGB"/>
+                        <constraint firstAttribute="trailingMargin" secondItem="DXd-6D-P3r" secondAttribute="trailing" constant="25" id="GLf-Gc-ZHi"/>
+                        <constraint firstAttribute="bottom" secondItem="hws-cS-w2j" secondAttribute="bottom" constant="49" id="c9L-p5-lGB"/>
                         <constraint firstAttribute="trailing" secondItem="ESv-EL-H5h" secondAttribute="trailing" constant="62" id="d50-2p-j9v"/>
-                        <constraint firstItem="ESv-EL-H5h" firstAttribute="top" secondItem="Thc-ns-iG4" secondAttribute="top" constant="44" id="tj1-xJ-RYs"/>
+                        <constraint firstItem="DXd-6D-P3r" firstAttribute="leading" secondItem="Thc-ns-iG4" secondAttribute="leadingMargin" constant="24" id="eAL-r8-urB"/>
+                        <constraint firstAttribute="bottomMargin" secondItem="DXd-6D-P3r" secondAttribute="bottom" constant="5" id="fNd-wL-z0v"/>
+                        <constraint firstItem="ESv-EL-H5h" firstAttribute="top" secondItem="Thc-ns-iG4" secondAttribute="top" constant="23" id="tj1-xJ-RYs"/>
                         <constraint firstAttribute="width" constant="401" id="zf5-yN-OG8"/>
                     </constraints>
                 </view>
