--- a/WoofRunner/Storyboards/Menu.storyboard
+++ b/WoofRunner/Storyboards/Menu.storyboard
@@ -28,7 +28,7 @@
                                 <color key="backgroundColor" red="0.84473580239143464" green="0.94523318527918776" blue="0.80820128154025395" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j9d-GK-BQI" userLabel="customBtn">
-                                <rect key="frame" x="243" y="718" width="282" height="95"/>
+                                <rect key="frame" x="243" y="638" width="282" height="95"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="282" id="amb-DQ-whB"/>
                                     <constraint firstAttribute="height" constant="95" id="dSq-yd-TYl"/>
@@ -38,15 +38,8 @@
                                     <segue destination="KWp-NW-dJb" kind="show" id="ReE-sQ-ToZ"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="test-logo" translatesAutoresizingMaskIntoConstraints="NO" id="VBf-YC-aN2">
-                                <rect key="frame" x="64" y="63" width="640" height="512"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="640" id="UVo-t5-P3l"/>
-                                    <constraint firstAttribute="width" secondItem="VBf-YC-aN2" secondAttribute="height" multiplier="5:4" id="eBi-NO-uZW"/>
-                                </constraints>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d2d-nQ-NcI" userLabel="playBtn">
-                                <rect key="frame" x="216" y="583" width="336" height="95"/>
+                                <rect key="frame" x="216" y="535" width="336" height="95"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="336" id="EO1-Ll-sCM"/>
                                     <constraint firstAttribute="height" constant="95" id="awv-5b-ccv"/>
@@ -56,15 +49,22 @@
                                     <segue destination="nbQ-hY-7Ds" kind="show" id="R3E-N8-hso"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="game-logo" translatesAutoresizingMaskIntoConstraints="NO" id="VBf-YC-aN2">
+                                <rect key="frame" x="34" y="146" width="700" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="700" id="UVo-t5-P3l"/>
+                                    <constraint firstAttribute="width" secondItem="VBf-YC-aN2" secondAttribute="height" multiplier="5:4" constant="387.5" id="eBi-NO-uZW"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.93523098487854883" green="1" blue="0.81973818164805135" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="jjC-J2-fu1" firstAttribute="top" secondItem="j9d-GK-BQI" secondAttribute="bottom" constant="211" id="3x2-0j-k5T"/>
+                            <constraint firstItem="jjC-J2-fu1" firstAttribute="top" secondItem="j9d-GK-BQI" secondAttribute="bottom" constant="291" id="3x2-0j-k5T"/>
                             <constraint firstItem="j9d-GK-BQI" firstAttribute="centerX" secondItem="ktK-jY-r7L" secondAttribute="centerX" id="Eev-1V-nEr"/>
-                            <constraint firstItem="d2d-nQ-NcI" firstAttribute="top" secondItem="VBf-YC-aN2" secondAttribute="bottom" constant="8" id="Kbh-mS-4UQ"/>
+                            <constraint firstItem="d2d-nQ-NcI" firstAttribute="top" secondItem="VBf-YC-aN2" secondAttribute="bottom" constant="139" id="Kbh-mS-4UQ"/>
                             <constraint firstItem="VBf-YC-aN2" firstAttribute="centerX" secondItem="ktK-jY-r7L" secondAttribute="centerX" id="QRC-kh-snw"/>
-                            <constraint firstItem="VBf-YC-aN2" firstAttribute="top" secondItem="KmX-fy-WkO" secondAttribute="bottom" constant="43" id="k9w-Cm-8nN"/>
+                            <constraint firstItem="VBf-YC-aN2" firstAttribute="top" secondItem="KmX-fy-WkO" secondAttribute="bottom" constant="126" id="k9w-Cm-8nN"/>
                             <constraint firstItem="d2d-nQ-NcI" firstAttribute="centerX" secondItem="ktK-jY-r7L" secondAttribute="centerX" id="pz0-BY-CsJ"/>
                         </constraints>
                     </view>
@@ -95,9 +95,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="custom-btn" width="282" height="95"/>
+        <image name="custom-btn" width="215" height="75"/>
+        <image name="game-logo" width="350" height="125"/>
         <image name="menu-background" width="384" height="512"/>
-        <image name="play-btn" width="282" height="95"/>
-        <image name="test-logo" width="300" height="250"/>
+        <image name="play-btn" width="215" height="75"/>
     </resources>
 </document>
