--- a/WoofRunner/Storyboards/CustomLevelSelector.storyboard
+++ b/WoofRunner/Storyboards/CustomLevelSelector.storyboard
@@ -28,7 +28,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RfU-rX-Owx">
-                                <rect key="frame" x="30" y="28" width="80" height="67"/>
+                                <rect key="frame" x="20" y="20" width="80" height="67"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="1ZU-DQ-xb9"/>
                                     <constraint firstAttribute="width" secondItem="RfU-rX-Owx" secondAttribute="height" multiplier="305:256" id="mwQ-zv-vPD"/>
@@ -43,8 +43,8 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="RfU-rX-Owx" firstAttribute="leading" secondItem="T15-I5-Oxx" secondAttribute="leadingMargin" constant="10" id="8j7-7a-hYh"/>
-                            <constraint firstItem="RfU-rX-Owx" firstAttribute="top" secondItem="2e5-WH-JKz" secondAttribute="bottom" constant="8" id="Kok-rW-ks1"/>
+                            <constraint firstItem="RfU-rX-Owx" firstAttribute="leading" secondItem="T15-I5-Oxx" secondAttribute="leadingMargin" id="8j7-7a-hYh"/>
+                            <constraint firstItem="RfU-rX-Owx" firstAttribute="top" secondItem="2e5-WH-JKz" secondAttribute="bottom" id="Kok-rW-ks1"/>
                         </constraints>
                         <connections>
                             <outlet property="dataSource" destination="khD-N4-YD9" id="cu4-MQ-Z3d"/>
