--- a/WoofRunner/Storyboards/LevelMarketplace.storyboard
+++ b/WoofRunner/Storyboards/LevelMarketplace.storyboard
@@ -9,6 +9,15 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Menu-->
+        <scene sceneID="Er4-It-JRo">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Menu" id="Dh4-3c-0rJ" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="q4T-FJ-IgW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="F0W-w2-YYV" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="-725" y="86"/>
+        </scene>
         <!--Login View Controller-->
         <scene sceneID="peZ-2I-7ay">
             <objects>
@@ -64,6 +73,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <segue destination="F0W-w2-YYV" kind="unwind" identifier="unwindToMenu" unwindAction="unwindToMenuWithSegue:" id="vZI-Hd-xv6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1li-EC-ZAi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
