--- a/WoofRunner/Storyboards/LevelMarketplace.storyboard
+++ b/WoofRunner/Storyboards/LevelMarketplace.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Ecw-wo-h76">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="tPe-qI-lLi">
     <device id="ipad12_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -16,49 +16,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q4T-FJ-IgW" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="F0W-w2-YYV" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-725" y="86"/>
-        </scene>
-        <!--Login View Controller-->
-        <scene sceneID="peZ-2I-7ay">
-            <objects>
-                <viewController id="Ecw-wo-h76" customClass="LMLoginViewController" customModule="WoofRunner" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="MJ1-ln-VcH"/>
-                        <viewControllerLayoutGuide type="bottom" id="ISg-Vt-QcC"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="J27-B6-sXy">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rk7-pa-oBG">
-                                <rect key="frame" x="362" y="658" width="300" height="50"/>
-                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="Eb9-uq-Sy3"/>
-                                    <constraint firstAttribute="width" constant="300" id="eur-19-bPy"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                <state key="normal" title="Login with Facebook">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="onFbLogin:" destination="Ecw-wo-h76" eventType="touchUpInside" id="l7A-93-PhV"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="rk7-pa-oBG" firstAttribute="centerX" secondItem="J27-B6-sXy" secondAttribute="centerX" id="1j2-Cv-2ar"/>
-                            <constraint firstItem="rk7-pa-oBG" firstAttribute="centerY" secondItem="J27-B6-sXy" secondAttribute="centerY" id="Wkt-eM-WlI"/>
-                        </constraints>
-                    </view>
-                    <connections>
-                        <segue destination="tPe-qI-lLi" kind="show" identifier="segueToMarketplace" id="cTr-3L-hR0"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="0Qs-yx-dew" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="109.5703125" y="147.58418740849194"/>
+            <point key="canvasLocation" x="660" y="148"/>
         </scene>
         <!--Home View Controller-->
         <scene sceneID="fHY-ae-bzS">
