--- a/WoofRunner/Storyboards/LevelSelector.storyboard
+++ b/WoofRunner/Storyboards/LevelSelector.storyboard
@@ -44,7 +44,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VnG-P1-GCq">
-                                <rect key="frame" x="30" y="28" width="80" height="67"/>
+                                <rect key="frame" x="20" y="20" width="80" height="67"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="B1B-jb-yVH"/>
                                     <constraint firstAttribute="width" secondItem="VnG-P1-GCq" secondAttribute="height" multiplier="305:256" id="aDR-um-qEc"/>
@@ -59,14 +59,15 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="VnG-P1-GCq" firstAttribute="leading" secondItem="JD4-3v-opV" secondAttribute="leadingMargin" constant="10" id="Na8-38-G6A"/>
-                            <constraint firstItem="VnG-P1-GCq" firstAttribute="top" secondItem="I4Q-kf-4qZ" secondAttribute="bottom" constant="8" id="obZ-eV-28G"/>
+                            <constraint firstItem="VnG-P1-GCq" firstAttribute="leading" secondItem="JD4-3v-opV" secondAttribute="leadingMargin" id="Na8-38-G6A"/>
+                            <constraint firstItem="VnG-P1-GCq" firstAttribute="top" secondItem="I4Q-kf-4qZ" secondAttribute="bottom" constant="20" id="obZ-eV-28G"/>
                         </constraints>
                         <connections>
                             <outlet property="dataSource" destination="rrS-Wa-h6v" id="2L0-H8-Fb8"/>
                             <outlet property="delegate" destination="rrS-Wa-h6v" id="eDQ-ae-LDd"/>
                         </connections>
                     </view>
+                    <nil key="simulatedStatusBarMetrics"/>
                     <connections>
                         <outlet property="carousel" destination="JD4-3v-opV" id="5Xy-h1-lwn"/>
                         <outlet property="homeButton" destination="VnG-P1-GCq" id="Ghr-Qq-f8U"/>
